--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,15 @@
-[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue,css,scss,sass,less,styl}]
+# https://editorconfig.org
+
+root = true
+
+[*]
 charset = utf-8
-indent_size = 2
 indent_style = space
+indent_size = 2
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-end_of_line = lf
-max_line_length = 100
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
