--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.10"
+  },
+  "engines": {
+    "node": ">=18.0.1"
   }
 }
