--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "lint:style": "stylelint **/*.{html,vue,css} --fix",
+    "lint:style": "stylelint **/*.{html,vue,css,less} --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -29,10 +29,13 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vue": "^10.1.0",
+    "less": "^4.3.0",
     "postcss-html": "^1.8.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^3.5.3",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0",
+    "stylelint-less": "^3.0.1",
     "stylelint-order": "^7.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
