--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vue": "^10.1.0",
     "less": "^4.3.0",
+    "lint-staged": "^16.0.0",
     "postcss-html": "^1.8.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.5.3",
+    "simple-git-hooks": "^2.13.0",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0",
     "stylelint-less": "^3.0.1",
@@ -40,6 +42,17 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.10"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{css,less}": "stylelint --fix",
+    "*.{js,ts,tsx,vue}": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix"
+    ]
   },
   "engines": {
     "node": ">=18.0.1"
