--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --build && vite build",
-    "preview": "vite preview",
-    "prepare": "npx simple-git-hooks",
+    "build": "run-p type-check \"build-only {@}\" --",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "preview": "vite preview",
+    "prepare": "npx simple-git-hooks",
+    "lint": "run-s lint:*",
+    "lint:lint-staged": "lint-staged",
+    "lint:script": "eslint . --fix",
     "lint:style": "stylelint **/*.{html,vue,css,less} --fix",
     "format": "prettier --write src/"
   },
@@ -33,6 +35,7 @@
     "eslint-plugin-vue": "^10.1.0",
     "less": "^4.3.0",
     "lint-staged": "^16.0.0",
+    "npm-run-all2": "^8.0.4",
     "postcss-html": "^1.8.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.5.3",
