--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,11 @@
   "eslint.enable": true,
   "eslint.validate": ["javascript", "typescript", "html", "vue"],
   "stylelint.enable": true,
-  "stylelint.validate": ["css", "less", "postcss", "scss", "sass", "vue"]
+  "stylelint.validate": ["css", "less", "postcss", "scss", "sass", "vue"],
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "tsconfig.json": "tsconfig.*.json, env.d.ts",
+    "vite.config.*": "jsconfig*, vitest.config.*, cypress.config.*, playwright.config.*, .env.*",
+    "package.json": "package-lock.json, pnpm*, .yarnrc*, yarn*, .eslint*, eslint*, .prettier*, prettier*, .editorconfig, .stylelint*, commit*"
+  }
 }
