--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "pinia": "^3.0.2",
     "vue": "^3.5.14",
+    "vue-i18n": "^11.1.5",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
