--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-standard",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
