--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:lint-staged": "lint-staged",
     "lint:script": "eslint . --fix",
     "lint:style": "stylelint src/**/*.{html,css,vue,less} --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.9.0",
