--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "npx tsc",
     "preview": "vite preview",
-    "lint:script": "eslint . --fix"
+    "lint:script": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -24,11 +25,13 @@
     "eslint": "^9.29.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.0"
