--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "npx tsc",
     "preview": "vite preview",
     "lint:script": "eslint . --fix",
+    "lint:style": "stylelint src/**/*.{html,css,less} --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -31,7 +32,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
+    "postcss-html": "^1.8.0",
     "prettier": "^3.6.2",
+    "stylelint": "^16.21.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-order": "^7.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.0"
