--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
+    "less": "^4.3.0",
     "postcss-html": "^1.8.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^3.6.2",
     "stylelint": "^16.21.0",
     "stylelint-config-standard": "^38.0.0",
+    "stylelint-less": "^3.0.1",
     "stylelint-order": "^7.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
