--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build-only": "vite build",
     "type-check": "npx tsc",
     "preview": "vite preview",
+    "prepare": "npx simple-git-hooks",
+    "lint": "run-s lint:*",
+    "lint:lint-staged": "lint-staged",
     "lint:script": "eslint . --fix",
     "lint:style": "stylelint src/**/*.{html,css,less} --fix",
     "format": "prettier --write ."
@@ -18,11 +21,13 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.30.1",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "commitlint": "^19.8.1",
     "eslint": "^9.29.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-perfectionist": "^4.15.0",
@@ -33,9 +38,12 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
     "less": "^4.3.0",
+    "lint-staged": "^16.1.2",
+    "npm-run-all2": "^8.0.4",
     "postcss-html": "^1.8.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.6.2",
+    "simple-git-hooks": "^2.13.0",
     "stylelint": "^16.21.0",
     "stylelint-config-standard": "^38.0.0",
     "stylelint-less": "^3.0.1",
@@ -43,6 +51,17 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "commit-msg": "npx commitlint --edit $1"
+  },
+  "lint-staged": {
+    "*.{css,less}": "stylelint --fix",
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "engines": {
     "node": ">=20.0.0"
