--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-p type-check build-only",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "preview": "vite preview",
@@ -19,7 +19,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "pinia": "^3.0.3",
-    "vue": "^3.5.14",
+    "vue": "^3.5.18",
     "vue-i18n": "^11.1.5",
     "vue-router": "^4.5.1"
   },
